# Thinking-Space

./: .gitignore  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  LICENSE  README.md  build.sh  dev.sh  ltm  thinkspc
agents/: AUDITS.md  DONE.md  HANDOFFS.md  README.md  TODO.md  UNDERSTANDINGS.md
agents/TEMPLATES/: HANDOFF_TEMPLATE.md  (+2 more)
backend/: pyproject.toml
backend/app/: main.py
backend/app/routers/: ai.py  capabilities.py  hierarchy.py  tools.py
backend/app/services/lego_blocks/: __init__.py  ai_chat_block.py  ai_credential_block.py  hierarchy_db_block.py  hierarchy_path_block.py  hierarchy_repo_block.py  hierarchy_schema_block.py  vault_constants_block.py  vault_path_block.py
backend/app/services/orchestrators/: __init__.py  ai_chat_orch.py  hierarchy_db_orch.py  hierarchy_orch.py
backend/app/tools/: file_activity.py  format_for_excalidraw.py  git_insights.py  pdf_to_markdown.py  thoughts_scanner.py  todo_scanner.py  transcript_cleaner.py
backend/tests/: test_capabilities_api.py  test_capability_parity_api.py  test_hierarchy_api.py  test_hierarchy_crud_api.py  test_hierarchy_sqlite_layer.py
docs/: ADR-004-YAML-Architecture.md  ADR-005-Agent-Capabilities.md  ADR-006-Agent-Workspace-Schema.md  ADR-007-Multi-Space-Hot-Switch-Isolation.md  BUILD-iOS.md  BUILD-macOS-LOCAL.md  CAPABILITY_ROLLOUT_MATRIX.md  EPIC-3-LOCAL-EXTENSION-PLATFORM.md  EXCALIDRAW_UPGRADE_PLAYBOOK.md  OPS_REPO_SYNC_CHECKLIST.md  UI-ADAPTIVE-VALIDATION-MATRIX.md
frontend/: capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
(+941 files in other folders)
